[package]
name = "gstorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cxx = "1.0"

[build-dependencies]
vcpkg = "0.2.15"
cc = "1.0.79"
bindgen = "0.64.0"
cxx-build = "1.0"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "b81bc3a"
dependencies = ["google-cloud-cpp[core,storage,experimental-storage-grpc]"]
